--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section id="testemunhos">
             <h2>O que dizem sobre o Teatro</h2>
             <div class="testemunho">
-                <blockquote>"O teatro me ajudou a me expressar melhor!" - <cite>Luiz</cite></blockquote>
+                <blockquote>"O teatro ajudou a me expressar melhor!" - <cite>Luiz</cite></blockquote>
             </div>
             <div class="testemunho">
                 <blockquote>"Participar do teatro me deixou mais confiante." - <cite>Gabriel</cite></blockquote>
