--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1>Teatro e Socialização - Feira de Ciências</h1>
             <nav>
                 <ul>
+                    <li><a href="#Projetos">Projetos Inspirados</a></li>
                     <li><a href="#sobre">Sobre o Projeto</a></li>
                     <li><a href="#participantes">Participantes</a></li>
                     <li><a href="#beneficios">Benefícios</a></li>
@@ -29,6 +30,18 @@
     </header>
     
     <main>
+        <section id="Projetos">
+            <div class="container">
+                <div class="">
+                    <h2>Projetos Inspirados</h2>
+                    <p>O projeto Teatro nas Escolas, desenvolvido pelo Centro Cultural da Fundação Cesgranrio, tem o objetivo de fomentar a cultura no ambiente acadêmico. É um projeto que leva para as escolas a representação lúdica de alguns de seus objetos de estudo, como bullying, diversidade e colaboração. <br> <br>Para poder acessar os projetos que serviram de inspiração é só <a href="https://cultural.cesgranrio.org.br/projetos/teatro-nas-escolas/#:~:text=O%20projeto%20Teatro%20nas%20Escolas,do%20indivíduo%20em%20sua%20totalidade">clicar aqui</a> ou escaneie o Qr Code.
+                    </p>
+                    <div class="gallery">
+                    <img src="./imgs/db0e4723-37d1-4ba5-97fa-84681c23dc3e.png" alt="Qr Code" class="img-clickable">
+                </div>
+                </div>
+            </div>
+        </section>
         <section id="sobre">
             <div class="container">
                 <h2>Sobre o Projeto</h2>
@@ -43,7 +56,7 @@
                     <div class="card">Luiz</div>
                     <div class="card">Gabriel</div>
                     <div class="card">Samuel</div>
-                    <div class="card">Ariele</div>
+                    <div class="card">Arielly</div>
                     <div class="card">Lívia</div>
                     <div class="card">Nathan</div>
                     <div class="card">Igor</div>
@@ -94,6 +107,7 @@
             <p>&copy; 2024 Projeto Escolar - Teatro e Socialização</p>
         </div>
     </footer>
+    
 
     <!-- Modal -->
     <div id="imageModal" class="modal">
