--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <div class="container">
                 <div class="">
                     <h2>Projetos Inspirados</h2>
-                    <p>O projeto Teatro nas Escolas, desenvolvido pelo Centro Cultural da Fundação Cesgranrio, tem o objetivo de fomentar a cultura no ambiente acadêmico. É um projeto que leva para as escolas a representação lúdica de alguns de seus objetos de estudo, como bullying, diversidade e colaboração. <br> <br>Para poder acessar os projetos que serviram de inspiração é só <a href="https://cultural.cesgranrio.org.br/projetos/teatro-nas-escolas/#:~:text=O%20projeto%20Teatro%20nas%20Escolas,do%20indivíduo%20em%20sua%20totalidade">clicar aqui</a> ou escaneie o Qr Code.
+                    <p>O projeto Teatro nas Escolas, desenvolvido pelo Centro Cultural da Fundação Cesgranrio, tem o objetivo de fomentar a cultura no ambiente acadêmico. É um projeto que leva para as escolas a representação lúdica de alguns de seus objetos de estudo, como bullying, diversidade e colaboração. <br> <br>Para poder acessar os projetos que serviram de inspiração é só <a target="_blank" href="https://cultural.cesgranrio.org.br/projetos/teatro-nas-escolas/#:~:text=O%20projeto%20Teatro%20nas%20Escolas,do%20indivíduo%20em%20sua%20totalidade">clicar aqui</a> ou escaneie o Qr Code.
                     </p>
                     <div class="gallery">
-                    <img src="./imgs/db0e4723-37d1-4ba5-97fa-84681c23dc3e.png" alt="Qr Code" class="img-clickable">
+                    <img src="./imgs/db0e4723-37d1-4ba5-97fa-84681c23dc3e.png" alt="Qr Code" target="_blank" class="img-clickable">
                 </div>
                 </div>
             </div>
